trunk/Archive/92c0adcb08b6a37f1858e88c2cbe490a-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:3:1: error: expected declaration before '}' token
 }
 ^
